    Adjusted default "idle_update_interval" value to "400".
    User may have to manually reset "Rest API Module" setting
    to update old values to new ones.
  - Fixed a timeout error.

* Fuel Widget
  - Add "swap_upper_caption" and "swap_lower_caption" options,
    which swap caption row position.
  - Add "column_index_*" options, which set display order for
    upper, middle, and lower rows.

* [New]Virtual Energy Widget
  - Show Virtual Energy usage data, which all settings and functionalities
    work the same way as Fuel Widget.
  - Virtual Energy usage readings are displayed in percentage,
    which range from 0 to 100.

* Misc
  - Updated User Guide info for Brands preset, Fuel calculator, Energy Module,
    Rest API Module, Fuel Widget, Virtual Energy Widget.

2.13.0 (2024-06-08)
-----------------------------
* General
  - Now unloads all image resources on widget close to free up RAM.

* Rest API Module
  - Add "connection_retry" option, which sets
    number of attempts to retry connection.
    Value range in "0" to "10".
    Default is "3" retries.
  - Add "connection_retry_delay" option, which sets
    time delay in seconds to retry connection.
    Value range in "0" to "60".
    Default is "1" second.
  - Fixed a timeout error.

* [New]Elevation Widget
  - Add Elevation Widget that displays track elevation plot.
    Note: elevation plot data is recorded together with track map.
    At least one complete & valid lap is required to generate elevation plot,
  - Show elevation reading in either meters or feet,
    depends on distance unit setting.
  - Show elevation progress bar & line according player's current position.
  - Show reference lines and marks.
  - Fully customizable plot display size, margin,
    detail level, text position and alignment.
    See user guide "Elevation" section for details.

* Flag Widget
  - Add "traffic_low_speed_threshold" option,
    which sets low speed threshold for showing