@@ -810,6 +810,7 @@ WIDGET_DEFAULT = {
         "bar_padding": 0.2,
         "bar_gap": 1,
         "lap_time_history_count": 10,
+        "show_virtual_energy_if_available": True,
         "show_empty_history": False,
         "font_color_laps": "#222222",
         "font_color_time": "#222222",
@@ -1467,6 +1468,7 @@ WIDGET_DEFAULT = {
         "bar_padding": 0.2,
         "bar_gap": 1,
         "stint_history_count": 2,
+        "show_virtual_energy_if_available": True,
         "show_empty_history": False,
         "minimum_stint_threshold_minutes": 10,
         "font_color_laps": "#222222",
